# Toy-Language-in-C

./: .gitignore  CMakeLists.txt  project.sh
docs/: README.md
lib_demo/: CMakeLists.txt  hello_demo.c
src/: bytecode.c  compiler.c  driver.c  gc.c  lex.c  main.c  mystr.c  obj_dict.c  obj_list.c  obj_str.c  objects.c  value.c  vm.c
src/includes/: basics.h  bytecode.h  compiler.h  driver.h  gc.h  lex.h  mystr.h  natives.h  obj_dict.h  obj_list.h  obj_str.h  objects.h  tb_api.h  value.h  vec.h  vm.h
suite/: bb_sort.tbasic  cat_stdin.tbasic  clamp.tbasic  dict.tbasic  for_loop.tbasic  hello_world.tbasic  iter_fib.tbasic  lists.tbasic  logical.tbasic  loops_2.tbasic  prints.tbasic  recur.tbasic  swap_vars.tbasic  test_gc.tbasic  vars.tbasic
suite/lib_demo_tests/: hello_world_2.tbasic
